--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,3 +1,11 @@
+html,
+body {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
 :root {
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
@@ -13,16 +21,18 @@
 }
 
 body {
-    margin: 0;
     display: flex;
     place-items: center;
     min-width: 320px;
     min-height: 100vh;
-
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
+}
+
+.main {
+    padding: 20px;
 }
 
 h1 {
@@ -52,6 +62,7 @@ textarea:focus {
 }
 
 button {
+    margin-top: 10px;
     border-radius: 8px;
     outline: none;
     border: 1px solid transparent;
@@ -90,4 +101,50 @@ a:hover {
     position: fixed;
     top: 0.5rem;
     right: 1rem;
+}
+
+@media (max-width: 480px) {
+    :root {
+        font-size: 14px;
+    }
+
+    #root {
+        width: 95%;
+    }
+
+    body {
+        min-width: auto;
+    }
+
+    .main {
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+
+    h1 {
+        font-size: 2em;
+        margin-bottom: 0.5em;
+    }
+
+    textarea {
+        width: 100%;
+        min-height: 10em;
+        font-size: 1rem;
+        line-height: 1.3rem;
+        padding: 1em;
+    }
+
+    button {
+        width: 100%;
+        padding: 0.75em;
+        font-size: 1.1em;
+    }
+
+    .live {
+        font-size: 1rem;
+        top: 1rem;
+        right: 1.5rem;
+    }
 }
